--- a/form.html
+++ b/form.html
@@ -16,9 +16,9 @@
             <br><br>
             Password:<input type="Password" placeholder="Enter your Password">
             <br><br>
-            <!-- <label for="101">
+            <label for="101">
                 <input type="radio" value="class XI" name="Aman" id="101">class XI
-            </label> -->
+            </label>
             <br>
             <!-- <label for="102">
                 <input type="radio" value="class XII" name="Aman" id="102">
