--- a/form.html
+++ b/form.html
@@ -20,10 +20,10 @@
                 <input type="radio" value="class XI" name="Aman" id="101">class XI
             </label>
             <br>
-            <!-- <label for="102">
+            <label for="102">
                 <input type="radio" value="class XII" name="Aman" id="102">
                 class XII
-            </label> -->
+            </label>
             <br><br>
             <!-- <label for="subject">
                 <input type="checkbox" value="Math" name="Subject" id="101">Math
