--- a/form.html
+++ b/form.html
@@ -25,11 +25,11 @@
                 class XII
             </label>
             <br><br>
-            <!-- <label for="subject">
+            <label for="subject">
                 <input type="checkbox" value="Math" name="Subject" id="101">Math
                 <br>
                 <input type="checkbox" value="phy" name="Subject" id="102">Physic
-            </label> -->
+            </label>
             <hr>
             <select name="Car" id="Car">
                 <option value="Quanto">Quanto</option>
