--- a/practice.html
+++ b/practice.html
@@ -40,7 +40,7 @@
 
 <body>
 
-    <!-- <head>
+    <head>
         <nav class="navbar">
             <ul>
                 <li>Home</li>
@@ -48,7 +48,7 @@
                 <li>Contact</li>
             </ul>
         </nav>
-    </head> -->
+    </head>
 
 </body>
 
