--- a/Animation_part2.html
+++ b/Animation_part2.html
@@ -29,9 +29,9 @@
         animation-duration: 3s;
         animation-timing-function: ease-in-out;
         animation-delay: 2s;
-        /* animation-iteration-count: 2; */
-        /* animation-direction:normal; */ 
-        /* animation: widthAnimate 3s ease-in-out 4 alternate;  */
+        animation-iteration-count: 2;
+        animation-direction:normal; 
+        animation: widthAnimate 3s ease-in-out 4 alternate; 
     }
     .image{
         height: 200px;
