--- a/Animation_part2.html
+++ b/Animation_part2.html
@@ -20,9 +20,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        /* border: 4px solid rgb(0, 0, 0); */
-        /* background-color: brown; */
-        /* height: 300px; */
+        border: 4px solid rgb(0, 0, 0);
+        background-color: brown;
+        height: 300px;
         /* width: 300px; */
         /* color: white; */
         /* animation: widthAnimate; */
