--- a/Animation_part2.html
+++ b/Animation_part2.html
@@ -26,7 +26,7 @@
         width: 300px;
         color: white;
         animation: widthAnimate;
-        /* animation-duration: 3s; */
+        animation-duration: 3s;
         /* animation-timing-function: ease-in-out; */
         /* animation-delay: 2s; */
         /* animation-iteration-count: 2; */
