--- a/Animation_part2.html
+++ b/Animation_part2.html
@@ -51,7 +51,7 @@
 </style>
 <body>
     <div class="container">
-        <!-- <div class="box">This is box</div> -->
+        <div class="box">This is box</div>
         <img  class="image"src="../image/logo.jpg" alt="">
     </div>
 </body>
