--- a/Animation_part2.html
+++ b/Animation_part2.html
@@ -27,8 +27,8 @@
         color: white;
         animation: widthAnimate;
         animation-duration: 3s;
-        /* animation-timing-function: ease-in-out; */
-        /* animation-delay: 2s; */
+        animation-timing-function: ease-in-out;
+        animation-delay: 2s;
         /* animation-iteration-count: 2; */
         /* animation-direction:normal; */ 
         /* animation: widthAnimate 3s ease-in-out 4 alternate;  */
