--- a/Animation_part2.html
+++ b/Animation_part2.html
@@ -23,9 +23,9 @@
         border: 4px solid rgb(0, 0, 0);
         background-color: brown;
         height: 300px;
-        /* width: 300px; */
-        /* color: white; */
-        /* animation: widthAnimate; */
+        width: 300px;
+        color: white;
+        animation: widthAnimate;
         /* animation-duration: 3s; */
         /* animation-timing-function: ease-in-out; */
         /* animation-delay: 2s; */
