--- a/grid.html
+++ b/grid.html
@@ -17,8 +17,8 @@
         height: 20vh;
         display: grid;
         background-color: blue;
-        /* grid-row-gap: 12px;
-        grid-column-gap: 10px; */
+        grid-row-gap: 12px;
+        grid-column-gap: 10px;
         grid-template-columns: auto auto auto auto;
         grid-gap: 12px;
         /* grid-template-rows: 124px 124px;
