--- a/grid.html
+++ b/grid.html
@@ -21,8 +21,8 @@
         grid-column-gap: 10px;
         grid-template-columns: auto auto auto auto;
         grid-gap: 12px;
-        /* grid-template-rows: 124px 124px;
-        justify-content: space-between; */
+        grid-template-rows: 124px 124px;
+        justify-content: space-between;
     }
     
     .item {
