--- a/canvas.html
+++ b/canvas.html
@@ -15,9 +15,9 @@
     
     
     // Draw a line
-    // ctx.moveTo(0,0);
-    // ctx.lineTo(100,100);
-    // ctx.stroke();
+    ctx.moveTo(0,0);
+    ctx.lineTo(100,100);
+    ctx.stroke();
 
 
 
