--- a/canvas.html
+++ b/canvas.html
@@ -22,8 +22,8 @@
 
 
     // Draw Circle
-    // ctx.beginPath();
-    // ctx.arc(250,250,100,0,180*2*Math.PI);
-    // ctx.stroke();
+    ctx.beginPath();
+    ctx.arc(250,250,100,0,180*2*Math.PI);
+    ctx.stroke();
 </script>
 </html>
