--- a/face.html
+++ b/face.html
@@ -41,8 +41,8 @@
 
     // Draw Smile
     ctx.beginPath();
-    // ctx.arc(250,300,60,0,1*Math.PI);
-    // ctx.stroke();
+    ctx.arc(250,300,60,0,1*Math.PI);
+    ctx.stroke();
 
 
 </script>
