--- a/face.html
+++ b/face.html
@@ -32,12 +32,12 @@
     ctx.closePath();
 
     // Draw right eye
-    // ctx.fillStyle = "Black";
-    // ctx.beginPath();
-    // ctx.arc(320,200,20,0,180*2*Math.PI);
-    // ctx.stroke();
-    // ctx.fill();
-    // ctx.closePath();
+    ctx.fillStyle = "Black";
+    ctx.beginPath();
+    ctx.arc(320,200,20,0,180*2*Math.PI);
+    ctx.stroke();
+    ctx.fill();
+    ctx.closePath();
 
     // Draw Smile
     ctx.beginPath();
