--- a/Animation.html
+++ b/Animation.html
@@ -21,7 +21,7 @@
         
         transform: rotate(0.25turn);
         transform-origin: 0; 
-        /* transform: skew(4deg ,6deg); */
+        transform: skew(4deg ,6deg);
         
     } 
     img{
