--- a/Animation.html
+++ b/Animation.html
@@ -19,8 +19,8 @@
         border: 2px solid black; 
          display: inline-block; 
         
-       /*  transform: rotate(0.25turn);
-        transform-origin: 0; */
+        transform: rotate(0.25turn);
+        /* transform-origin: 0; */ 
         /* transform: skew(4deg ,6deg); */
         
     } 
