--- a/Animation.html
+++ b/Animation.html
@@ -30,7 +30,7 @@
         transition-property: height;
         transition-duration: 3s;
         transition-timing-function:ease-in; 
-        /* transition: height 3s ease-in-out 2s; */
+        transition: height 3s ease-in-out 2s;
     } 
     img:hover{
         height: 100px;
