--- a/Animation_part2.html
+++ b/Animation_part2.html
@@ -19,7 +19,7 @@
     .box{
         display: flex;
         justify-content: center;
-        /* align-items: center; */
+        align-items: center;
         /* border: 4px solid rgb(0, 0, 0); */
         /* background-color: brown; */
         /* height: 300px; */
