--- a/Animation.html
+++ b/Animation.html
@@ -25,7 +25,7 @@
         
     } 
     img{
-        /* transform:translate(125px,14px); */
+        transform:translate(125px,14px);
         height: 150px;
         /* transition-property: height; */
         /* transition-duration: 3s; */
