--- a/Animation.html
+++ b/Animation.html
@@ -27,10 +27,10 @@
     img{
         /* transform:translate(125px,14px); */
         height: 150px;
-        /* transition-property: height;
-        transition-duration: 3s;
-        transition-timing-function:ease-in; */
-        transition: height 3s ease-in-out 2s;
+        /* transition-property: height; */
+        /* transition-duration: 3s; */
+        /* transition-timing-function:ease-in; */ 
+        /* transition: height 3s ease-in-out 2s; */
     } 
     img:hover{
         height: 100px;
