--- a/Animation_part2.html
+++ b/Animation_part2.html
@@ -17,20 +17,20 @@
         width: 100vw;
     }
     .box{
-        /* display: flex;
+        display: flex;
         justify-content: center;
-        align-items: center;
-        border: 4px solid rgb(0, 0, 0);
-        background-color: brown;
-        height: 300px;
-        width: 300px;
-        color: white;
-        /* animation: widthAnimate;
-        animation-duration: 3s;
-        animation-timing-function: ease-in-out;
-        animation-delay: 2s;
-        animation-iteration-count: 2;
-        animation-direction:normal; */
+        /* align-items: center; */
+        /* border: 4px solid rgb(0, 0, 0); */
+        /* background-color: brown; */
+        /* height: 300px; */
+        /* width: 300px; */
+        /* color: white; */
+        /* animation: widthAnimate; */
+        /* animation-duration: 3s; */
+        /* animation-timing-function: ease-in-out; */
+        /* animation-delay: 2s; */
+        /* animation-iteration-count: 2; */
+        /* animation-direction:normal; */ 
         /* animation: widthAnimate 3s ease-in-out 4 alternate;  */
     }
     .image{
