--- a/Animation.html
+++ b/Animation.html
@@ -20,7 +20,7 @@
          display: inline-block; 
         
         transform: rotate(0.25turn);
-        /* transform-origin: 0; */ 
+        transform-origin: 0; 
         /* transform: skew(4deg ,6deg); */
         
     } 
