--- a/Animation.html
+++ b/Animation.html
@@ -29,7 +29,7 @@
         height: 150px;
         transition-property: height;
         transition-duration: 3s;
-        /* transition-timing-function:ease-in; */ 
+        transition-timing-function:ease-in; 
         /* transition: height 3s ease-in-out 2s; */
     } 
     img:hover{
